# benchmarking-scripts

./: .gitignore  Dockerfile  Makefile  README.md  command.py  ihm.py  launch_evaluation.sh  requirements.txt  run-benchs-gem5.sh  shifumi.py  text.py  wrappers.py
config/: benchmarks-docker.list  benchmarks.list  cc-docker-gem5.list  cc-docker.list  cc-ellana.list  cc.list  cc_gus.list  versions-docker-gem5.list  versions-docker.list  versions-ellana.list  versions.list
patches/: simpler_tma_scope.patch
perfpipedream/: .gitignore  CMakeLists.txt  README.md
perfpipedream/examples/: perf-pipedream-example.c
perfpipedream/lib/: perf-pipedream.c  perf-pipedream.h
pieces/: helpers.py  run_compilers.py  run_gus.py  run_perf.py  run_tam.py
polybench/utilities/: iacaMarks.h  papi_counters.list  polybench.c  polybench.h  polybench_stub.c
polybench/utilities/gem5/: m5ops.h
polybench/utilities/gem5/asm/generic/: m5ops.h
standalone/: .gitignore  evaluate.ipynb  generate-bin-reports.py  generate-gem5-reports.py  generate-gus-reports.py  run-simulators.py  vanilla-qemu-reports.py
